--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="/index.css">
+  <title>Путешествия по России</title>
+  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="/media.css">
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <link rel="stylesheet" href="./vendor/fonts/fonts.css">
 </head>
 <body class="page">
-    <header class="header section-nero">
+    <header class="header">
       <img src="/images/logo.png" alt="логотип" class="header__logo">
       <div><a class="header__lang-link header__lang-link_active" href="#">Ru</a>
       <a class="header__lang-link" href="#">En</a></div>
@@ -20,13 +22,12 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <figure>
-          <img class="lead__image" src="/images/lead-polka.jpg" alt="маршрут поезда" >
-          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-        </figure>
+        <div><img class="lead__image" src="/images/lead-polka.jpg" alt="маршрут поезда" >
+        <p class="lead__caption">ваша полка — верхняя</p>
+        </div>
       </section>
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <p class="intro__list">Часовых поясов 11<br>
           Объектов природного наследия ЮНЕСКО 12<br>
@@ -34,7 +35,7 @@
           Природных заповедников 105<br>
           Аэропортов 241</p>
       </section>
-      <section class="photo-grid section-nero">
+      <section class="photo-grid">
               <ul class="photo-grid__list">
                 <li class="photo-grid__item">
        <img class="photo-grid__img" src="/images/photo-grid-arisa.jpg" alt="фото машины на льду">  
@@ -138,17 +139,17 @@
           </li>
          </ul>
       </section> 
-      <section class="cover section-nero">
-        <div class="cover">
+      <section class="cover">
+        <div>
           <a class="cover cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-            <img src="/images/cover-trains.jpg" alt="фото поездов" class="cover__background">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <img src="/images/cover-trains.jpg" alt="фото поездов" class="cover cover__background">
+            <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </a>
         </div>
       </section>
     </main>
-    <footer class="footer section-nero">
+    <footer class="footer">
       <ul class="footer__links">
         <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
         <li><a class="footer__link" href="https://yandex.ru/pogoda"  target="_blank">Погода</a></li>
