добавление ссылки на проект в readme и редактирование html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li>Аэропортов 241</li>
         </ul>
       </section>
-      <div class="photo-grid">
+      <section class="photo-grid">
               <ul class="photo-grid__list">
                 <li class="photo-grid__item">
        <img class="photo-grid__img" src="/images/photo-grid-arisa.jpg" alt="фото машины на льду">  
@@ -76,7 +76,7 @@
         <img class="photo-grid__img" src="/images/photo-grid-tuman.jpg" alt="фото тумана и волка">  
                 </li>
               </ul>
-      </div>
+      </section>
       <section class="places">
         <ul class="place">
           <li class="place__item">
