--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
-  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
     <header class="header">
-      <img src="/images/logo.png" alt="логотип" class="header__logo">
+      <img src="./images/logo.png" alt="логотип" class="header__logo">
       <div><a class="header__lang-link header__lang-link_active" href="#">Ru</a>
       <a class="header__lang-link" href="#">En</a></div>
     </header>
@@ -18,7 +18,7 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <div><img class="lead__image" src="/images/lead-polka.jpg" alt="маршрут поезда">
+        <div><img class="lead__image" src="./images/lead-polka.jpg" alt="маршрут поезда">
         <p class="lead__caption">ваша полка — верхняя</p>
         </div>
       </section>
@@ -36,40 +36,40 @@
       <section class="photo-grid">
               <ul class="photo-grid__list">
                 <li class="photo-grid__item">
-       <img class="photo-grid__img" src="/images/photo-grid-arisa.jpg" alt="фото машины на льду">  
+       <img class="photo-grid__img" src="./images/photo-grid-arisa.jpg" alt="фото машины на льду">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-atharva-tulsi.jpg" alt="фото Азарва Тулси">  
+        <img class="photo-grid__img" src="./images/photo-grid-atharva-tulsi.jpg" alt="фото Азарва Тулси">  
               </li>
               <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-baikal-2.jpg" alt="фото Байкал">  
+        <img class="photo-grid__img" src="./images/photo-grid-baikal-2.jpg" alt="фото Байкал">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-baikal.jpg" alt="фото Байкал">  
+        <img class="photo-grid__img" src="./images/photo-grid-baikal.jpg" alt="фото Байкал">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-elbrus.jpg" alt="фото Эльбрус">  
+        <img class="photo-grid__img" src="./images/photo-grid-elbrus.jpg" alt="фото Эльбрус">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-ergaki.jpg" alt="фото Ергаки">   
+        <img class="photo-grid__img" src="./images/photo-grid-ergaki.jpg" alt="фото Ергаки">   
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-kamchatka-1.jpg" alt="фото Камчатка">  
+        <img class="photo-grid__img" src="./images/photo-grid-kamchatka-1.jpg" alt="фото Камчатка">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-kamchatka-2.jpg" alt="фото Камчатка">  
+        <img class="photo-grid__img" src="./images/photo-grid-kamchatka-2.jpg" alt="фото Камчатка">  
               </li>
               <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-kondratiev.jpg" alt="фото пешеходного знака">  
+        <img class="photo-grid__img" src="./images/photo-grid-kondratiev.jpg" alt="фото пешеходного знака">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-sochi.jpg" alt="фото Сочи">  
+        <img class="photo-grid__img" src="./images/photo-grid-sochi.jpg" alt="фото Сочи">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-train.jpg" alt="фото поезда">  
+        <img class="photo-grid__img" src="./images/photo-grid-train.jpg" alt="фото поезда">  
                 </li>
                 <li class="photo-grid__item">
-        <img class="photo-grid__img" src="/images/photo-grid-tuman.jpg" alt="фото тумана и волка">  
+        <img class="photo-grid__img" src="./images/photo-grid-tuman.jpg" alt="фото тумана и волка">  
                 </li>
               </ul>
       </section>
@@ -77,7 +77,7 @@
         <ul class="place">
           <li class="place__item">
             <h2 class="place__title">Куршская коса</h2>
-            <img src="/images/place-kosa.jpg" alt="фото Куршской косы" class="place__image">
+            <img src="./images/place-kosa.jpg" alt="фото Куршской косы" class="place__image">
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -89,7 +89,7 @@
            </li>
            <li class="place__item">
             <h2 class="place__title">Кольский</h2>
-            <img src="/images/place-kolsky.jpg" alt="фото гор" class="place__image">
+            <img src="./images/place-kolsky.jpg" alt="фото гор" class="place__image">
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
@@ -101,7 +101,7 @@
            </li>
            <li class="place__item">
             <h2 class="place__title">Алтай</h2>
-            <img src="/images/place-altai.jpg" alt="фото леса" class="place__image">
+            <img src="./images/place-altai.jpg" alt="фото леса" class="place__image">
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
@@ -113,7 +113,7 @@
           </li>
            <li class="place__item">
             <h2 class="place__title">Зимний Байкал</h2>
-            <img src="/images/place-winter-baikal.jpg" alt="фото Байкала" class="place__image">
+            <img src="./images/place-winter-baikal.jpg" alt="фото Байкала" class="place__image">
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -125,7 +125,7 @@
           </li>
            <li class="place__item">
             <h2 class="place__title">Карелия</h2>
-            <img src="/images/place-karelia.jpg" alt="фото Озера" class="place__image">
+            <img src="./images/place-karelia.jpg" alt="фото Озера" class="place__image">
             <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
@@ -139,7 +139,7 @@
       <section class="cover">
         <div>
           <a class="cover cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-            <img src="/images/cover-trains.jpg" alt="фото поездов" class="cover cover__background">
+            <img src="./images/cover-trains.jpg" alt="фото поездов" class="cover cover__background">
             <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </a>
