редактирование блока intro

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
       </p>
       <ul class="intro__list">
-        <li><span class="intro__list intro__list_weight">Часовых поясов </span>11</li>
-        <li><span class="intro__list intro__list_weight">Объектов природного наследия ЮНЕСКО </span>12</li>
-        <li><span class="intro__list intro__list_weight">Объектов культурного наследия ЮНЕСКО </span>16</li>
-        <li><span class="intro__list intro__list_weight">Природных заповедников </span>105</li>
-        <li><span class="intro__list intro__list_weight">Аэропортов </span>241</li>
+        <li>Часовых поясов <span class="intro__list-score">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-score">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-score">16</span></li>
+        <li>Природных заповедников <span class="intro__list-score">105</span></li>
+        <li>Аэропортов <span class="intro__list-score">241</span></li>
       </ul>
     </section>
     <section class="photo-grid">
@@ -107,7 +107,8 @@
           <img src="./images/place-kolsky.jpg" alt="фото гор" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              target="_blank">National
               Geographic</a>
           </div>
           <div class="place__paragraphs">
@@ -172,7 +173,8 @@
     <section class="cover">
       <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
-        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие
+          от&nbsp;столицы до&nbsp;Байкала на
           электричках.</p>
       </a>
     </section>
